<resources>
    <string name="app_name">Check Connection</string>
    <string name="ip">IP</string>
    <string name="ipAddress">IP Address</string>
    <string name="ipAddress1">IP Address 1</string>
    <string name="ipAddress2">IP Address 2</string>
    <string name="ipAddress3">IP Address 3</string>
    <string name="predefinedIpAddresses">Predefined IP Addresses:</string>
    <string name="userIpAddresses">Your IP Addresses:</string>
    <string name="port">Port</string>
    <string name="defaultPort">443</string>
    <string name="ipTest">IP Test</string>
    <string name="start">Start Testing</string>
    <string name="stop">Stop Testing</string>
    <string name="delay">Delay between \n each test</string>
    <string name="tryAgain">Try Again</string>
    <string name="manageAddresses">Manage Addresses</string>
    <string name="noDataText">No data available</string>
    <string name="notifPermissionDenied">Notification permission denied</string>
    <string name="connectionSuccess">Connection Success</string>
    <string name="connectionFailed">Connection Failed</string>
    <string name="testing">Testing⏳</string>
    <string name="connectivityStatus">Connectivity Status</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="deny">Deny</string>
    <string name="error">Error!</string>
    <string name="canDrawOverlaysPermissionTitle">Need Permission</string>
    <string name="canDrawOverlaysPermissionContent">In order to see connectivity, To display the connection status for any address you enter, you need to enable a permission so that the app can show you the connection status in any app you use. Select the connection test app in the section you are directed to, and enable the option to activate it.</string>
    <string name="noAddress">There is no Address here</string>
    <string name="navOpen">Open</string>
    <string name="navClose">Close</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="languagePersianEnglish">Language (زبان)</string>
    <string name="testboxOverlay">Testboxes Overlay</string>
    <string name="domain">Domain</string>
    <string name="country">Country</string>
    <string name="ip1">IP1</string>
    <string name="ip2">IP2</string>
    <string name="ip3">IP3</string>

    <string-array name="language_array">
        <item name="Farsi"> فارسی</item>
        <item name="English">English</item>
        <item name="SystemDefault">System Default</item>
    </string-array>

    <string-array name="overlay_array">
        <item name="topLeft">Top Left</item>
        <item name="topRight">Top Right</item>
        <item name="bottomLeft">Bottom Left</item>
        <item name="bottomRight">Bottom Right</item>
        <item name="SystemDefault">Default</item>
    </string-array>

</resources>