<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbarHeight"
        app:layout_anchorGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|end"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:src="@drawable/ic_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|end"
            android:layout_marginEnd="16dp"
            android:text="@string/app_name"
            android:textColor="@color/c404040"
            android:textSize="@dimen/toolbarTitleSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imgBack"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|start"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            android:src="@drawable/ic_help"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <!--==========================================================-->

        <TextView
            android:id="@+id/txtIP1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/addressOrIp"
            android:textColor="@color/c404040"
            android:textSize="@dimen/fourthText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textNumber1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="1"
            android:textColor="@color/c606060"
            android:textSize="@dimen/firstText"
            app:layout_constraintBottom_toBottomOf="@+id/txtIP1"
            app:layout_constraintEnd_toStartOf="@+id/txtIP1"
            app:layout_constraintTop_toTopOf="@+id/txtIP1" />

        <EditText
            android:id="@+id/edtIP1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/ip"
            android:inputType="text"
            android:singleLine="true"
            android:text="api.twitter.com"
            app:layout_constraintBottom_toBottomOf="@+id/txtIP1"
            app:layout_constraintEnd_toStartOf="@+id/textNumber1"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/txtIP1" />

        <TextView
            android:id="@+id/txtPort1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|end"
            android:layout_marginEnd="8dp"
            android:padding="4dp"
            android:text="@string/port"
            android:textColor="@color/c404040"
            android:textSize="@dimen/fourthText"
            app:layout_constraintBottom_toBottomOf="@+id/txtIP1"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/txtIP1" />

        <EditText
            android:id="@+id/edtPort1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/defaultPort"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:text="443"
            app:layout_constraintBottom_toBottomOf="@+id/txtPort1"
            app:layout_constraintEnd_toStartOf="@+id/txtPort1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtPort1" />

        <!--==========================================================-->

        <TextView
            android:id="@+id/txtIP2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/addressOrIp"
            android:textColor="@color/c404040"
            android:textSize="@dimen/fourthText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtIP1" />

        <TextView
            android:id="@+id/textNumber2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="2"
            android:textColor="@color/c606060"
            android:textSize="@dimen/firstText"
            app:layout_constraintBottom_toBottomOf="@+id/txtIP2"
            app:layout_constraintEnd_toStartOf="@+id/txtIP2"
            app:layout_constraintTop_toTopOf="@+id/txtIP2" />

        <EditText
            android:id="@+id/edtIP2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/ip"
            android:inputType="text"
            android:singleLine="true"
            android:text="10.10.34.35"
            app:layout_constraintBottom_toBottomOf="@+id/txtIP2"
            app:layout_constraintEnd_toStartOf="@+id/textNumber2"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/txtIP2" />

        <TextView
            android:id="@+id/txtPort2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|end"
            android:layout_marginEnd="8dp"
            android:padding="4dp"
            android:text="@string/port"
            android:textColor="@color/c404040"
            android:textSize="@dimen/fourthText"
            app:layout_constraintBottom_toBottomOf="@+id/txtIP2"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/txtIP2" />

        <EditText
            android:id="@+id/edtPort2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/defaultPort"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:text="443"
            app:layout_constraintBottom_toBottomOf="@+id/txtPort2"
            app:layout_constraintEnd_toStartOf="@+id/txtPort2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtPort2" />

        <!--==========================================================-->

        <TextView
            android:id="@+id/txtIP3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/addressOrIp"
            android:textColor="@color/c404040"
            android:textSize="@dimen/fourthText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtIP2" />

        <TextView
            android:id="@+id/textNumber3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="3"
            android:textColor="@color/c606060"
            android:textSize="@dimen/firstText"
            app:layout_constraintBottom_toBottomOf="@+id/txtIP3"
            app:layout_constraintEnd_toStartOf="@+id/txtIP3"
            app:layout_constraintTop_toTopOf="@+id/txtIP3" />

        <EditText
            android:id="@+id/edtIP3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/ip"
            android:inputType="text"
            android:singleLine="true"
            app:layout_constraintBottom_toBottomOf="@+id/txtIP3"
            app:layout_constraintEnd_toStartOf="@+id/textNumber3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/txtIP3" />

        <TextView
            android:id="@+id/txtPort3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|end"
            android:layout_marginEnd="8dp"
            android:padding="4dp"
            android:text="@string/port"
            android:textColor="@color/c404040"
            android:textSize="@dimen/fourthText"
            app:layout_constraintBottom_toBottomOf="@+id/txtIP3"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/txtIP3" />

        <EditText
            android:id="@+id/edtPort3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/defaultPort"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:text="443"
            app:layout_constraintBottom_toBottomOf="@+id/txtPort3"
            app:layout_constraintEnd_toStartOf="@+id/txtPort3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtPort3" />

        <!--==========================================================-->


        <TextView
            android:id="@+id/txtDelay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|end"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:padding="4dp"
            android:text="@string/delay"
            android:textColor="@color/c404040"
            android:textSize="@dimen/fourthText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtIP3" />

        <EditText
            android:id="@+id/edtDelay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="1000"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:text="1000"
            app:layout_constraintBottom_toBottomOf="@+id/txtDelay"
            app:layout_constraintEnd_toStartOf="@+id/txtDelay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtDelay" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/txtDelay" />

        <Button
            android:id="@+id/btnStop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/stop"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnStart" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>